@@ -1,5 +1,6 @@
 * 0.72
 - Event client supports multiple backend implementations simultaneously
+- Move logging management code from log module to new log-manager module
 
 * 0.71
 
